--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -3,6 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 .border-1 {
   border-width: 1px;
 }
