--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -10,6 +10,9 @@
 
   --vt-c-indigo: #2c3e50;
 
+  --vt-c-bg-clear: #D6EDD4;
+  --vt-c-bg-dark: #4D4D4D;
+
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
@@ -21,32 +24,32 @@
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 }
 
-/* semantic color variables for this project */
+/*!* semantic color variables for this project *!*/
 :root {
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
+  --color-background: var(--vt-c-bg-clear);
+/*  --color-background-soft: var(--vt-c-white-soft);*/
+/*  --color-background-mute: var(--vt-c-white-mute);*/
 
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
+/*  --color-border: var(--vt-c-divider-light-2);*/
+/*  --color-border-hover: var(--vt-c-divider-light-1);*/
 
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
+/*  --color-heading: var(--vt-c-text-light-1);*/
+/*  --color-text: var(--vt-c-text-light-1);*/
 
-  --section-gap: 160px;
+/*  --section-gap: 160px;*/
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
+    --color-background: var(--vt-c-bg-dark);
+/*    --color-background-soft: var(--vt-c-black-soft);*/
+/*    --color-background-mute: var(--vt-c-black-mute);*/
 
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
+/*    --color-border: var(--vt-c-divider-dark-2);*/
+/*    --color-border-hover: var(--vt-c-divider-dark-1);*/
 
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
+/*    --color-heading: var(--vt-c-text-dark-1);*/
+/*    --color-text: var(--vt-c-text-dark-2);*/
   }
 }
 
