--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,5 @@
 @import './base.css';
+@import '@uivjs/vue-markdown-preview/markdown.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
